# machine-krb

./: .gitignore  Cargo.toml  Makefile  README.md
.copr/: Makefile
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml  release.yml
config/: config.yaml
crates/machine-krb/: Cargo.toml  README.md
crates/machine-krb-service/: Cargo.toml  README.md
crates/machine-krb-service/src/: config.rs  main.rs
crates/machine-krb/src/: ccache.rs  error.rs  exec.rs  identity.rs  join.rs  lib.rs
debian/: changelog  control  copyright  machine-krb-service.prerm  rules
packaging/: alpine-periodic-hourly  machine-krb-service.spec  make-obs-debsrc.sh  nfpm.yaml
packaging/scripts/: postinstall.sh  preremove.sh
systemd/: 90-machine-krb-service  machine-krb-service.service  machine-krb-service.timer  machine-krb.tmpfiles.conf
